--- a/consearch/search/templates/template.html
+++ b/consearch/search/templates/template.html
@@ -37,8 +37,7 @@
     </nav> -->
     <div class="jumbotron bg-danger text-white">
         <h1>Con Search</h1>
-        <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
-            responsive, mobile-first projects on the web.</p>
+        <h5>Music is life. That’s why our hearts have beats.</h5>
     </div>
     <div class="container">
         <div class="row">
